--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@ hr {
 }
 
 .choose-name > input {
-	width: 25vw;
+	width: 30vw;
 	height: 10vh;
 	border: 2px solid #cf9735;
 	background-color: #e9dcc9;
@@ -34,7 +34,7 @@ hr {
 }
 
 .choose-name > button {
-	width: 32vw;
+	width: 35vw;
 	height: 10vh;
 	border: 2px solid #eab610;
 	background-color: #eab610;
@@ -46,9 +46,9 @@ hr {
 	cursor: pointer;
 }
 
-.main > .lobby {
+.lobby {
 	width: 30vw;
-	height: 90vh;
+	height: 30vh;
 	padding: 10px;
 	background-color: #e7dcc8;
 	border-radius: 10px;
@@ -59,19 +59,25 @@ hr {
 	gap: 20px;
 }
 
-.lobby > .lobbies {
-	width: 90%;
-	height: 80%;
+.host-lobby {
+	width: 90vw;
+	height: 90vh;
+	padding: 10px;
+	background-color: #e7dcc8;
 	border-radius: 10px;
-	border: 2px solid #cf9735;
-	background-color: #e9dcc9;
-	color: #cf9735;
-	overflow-y: scroll;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+}
+#pin {
+	font-size: 3.4rem;
 }
 
 .lobby > button {
 	width: 50%;
-	height: 5%;
+	height: 20%;
 	border: 2px solid #eab610;
 	background-color: #eab610;
 	color: #ad7e2c;
@@ -87,41 +93,50 @@ hr {
 
 .lobby > input {
 	width: 80%;
-	height: 5%;
+	height: 20%;
 	border: 2px solid #cf9735;
 	border-radius: 10px;
 	padding: 5px;
-	font-size: 1rem;
+	font-size: 2rem;
 	color: #cf9735;
 	background-color: #e9dcc9;
 	text-align: center;
 }
 
-.lobbies > .lobby-element {
+.players {
 	padding: 10px;
+	width: 100%;
+	height: 50%;
 	margin-bottom: 10px;
 	border: 2px solid #cf9735;
 	border-radius: 5px;
 	background-color: #f5e9d7;
 	color: #cf9735;
 	font-size: 1.5rem;
-	text-align: center;
-	cursor: pointer;
 }
 
-.lobby-element > button {
-	width: 100%;
-	height: 40px;
-	border: none;
-	border-radius: 5px;
-	background-color: #cf9735;
-	color: white;
-	font-size: 1rem;
+.players > div {
+	display: inline-block;
+	padding: 10px 20px;
+	margin: 5px;
+	border: 2px solid #cf9735;
+	border-radius: 20px;
+	background-color: #e9dcc9;
+	color: #cf9735;
+	font-size: 1.2rem;
 	font-weight: bold;
-	cursor: pointer;
-	transition: background-color 0.3s ease;
+	text-align: center;
 }
 
 .lobby-element > button:hover {
 	background-color: #ad7e2c;
+}
+
+@media (max-width: 768px) {
+	.choose-name > input,
+	.choose-name > button {
+		width: 80vw;
+		height: 15vh;
+		font-size: 2.5rem;
+	}
 }
